--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
     "@auth/prisma-adapter": "^2.7.2",
+    "@clerk/nextjs": "^6.20.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.11",
