--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "@types/file-saver": "^2.0.7",
+    "@types/sax": "^1.2.7",
+    "@types/uuid": "^10.0.0",
     "@types/xml2js": "^0.4.14",
     "ai": "^4.3.16",
     "chart.js": "^4.4.9",
@@ -81,10 +83,12 @@
     "react-hook-form": "^7.56.4",
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
+    "sax": "^1.4.1",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.3.0",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "xml2js": "^0.6.2",
     "zod": "^3.25.28",
